--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -1,4 +1,5 @@
 
+
 {% extends "layout.html" %}
 {% block body %}
 
@@ -11,102 +12,41 @@
                 <h1 class="text-capitalize">Checkout</h1>
             </div>
             <div class="row">
-                <!--Grid column-->
-                <div class="col-lg-8">
-                    <!-- Card -->
-                    <div class="card bg_checkout_1 pb-5">
-                        <div class="card-body">
-                            <h5 class="mb-5">Billing details</h5>
-                            <!-- Grid row -->
-                            <div class="row">
-                                <!-- Grid column -->
-                                <div class="col-lg-6">
-                                    <!-- First name -->
-                                    <div class="form-group mb-0 mb-lg-4">
-                                        <label for="firstName">First name</label>
-                                        <input type="text" id="firstName" class="form-control mb-0 mb-lg-2">
-                                    </div>
-                                </div>
-                                <!-- Grid column -->
-
-                                <!-- Grid column -->
-                                <div class="col-lg-6">
-                                    <!-- Last name -->
-                                    <div class="form-group md-outline">
-                                        <label for="lastName">Last name</label>
-                                        <input type="text" id="lastName" class="form-control">
-                                    </div>
-                                </div>
-                                <!-- Grid column -->
-                            </div>
-                            <!-- Grid row -->
-
-                            <!-- Phone -->
-                            <div class="form-group">
-                                <label for="form18">Phone</label>
-                                <input type="number" id="form18" class="form-control">
-                            </div>
-
-                            <!-- Email address -->
-                            <div class="form-group">
-                                <label for="form19">Email address</label>
-                                <input type="email" id="form19" class="form-control">
-                            </div>
-
-                            <!-- Country -->
-                            <div class="d-flex flex-wrap">
-                                <div class="w-100">
-                                    <label>Country</label>
-                                    <select class="custom-select form-group">
-                                        <option value="" selected>Choose your option</option>
-                                        <option value="1">Option 1</option>
-                                        <option value="2">Option 2</option>
-                                        <option value="3">Option 3</option>
-                                    </select>
-                                </div>
-                            </div>
-
-                            <!-- Address Part 1 -->
-                            <div class="form-group">
-                                <label for="form14">Address Line 1</label>
-                                <input type="text" id="form14" placeholder="House number and street name"
-                                    class="form-control">
-                            </div>
-
-                            <!-- Address Part 2 -->
-                            <div class="form-group">
-                                <label for="form15">Address Line 2</label>
-                                <input type="text" id="form15" placeholder="Apartment, suite, unit etc. (optional)"
-                                    class="form-control">
-                            </div>
-
-                            <!-- Postcode / ZIP -->
-                            <div class="form-group">
-                                <label for="form16">Postcode / ZIP</label>
-                                <input type="text" id="form16" class="form-control">
-                            </div>
-
-                            <!-- Town / City -->
-                            <div class="form-group">
-                                <label for="form17">Town / City</label>
-                                <input type="text" id="form17" class="form-control">
-                            </div>
-
-                            <!-- Additional information -->
-                            <div class="form-group">
-                                <label for="form76">Additional information</label>
-                                <textarea id="form76" class="md-textarea form-control" rows="4"></textarea>
-                            </div>
-                            <!-- <button class="btn btn-success"><i class="fa fa-check"></i> Purchase</button> -->
-                            <div class="text-center">
-                                <a href="/order_confirmation" class="btn btn-primary">
-                                    <i class="fa fa-check mr-2"></i>Purchase
-                                </a>
-                            </div>
+                <div class="col-md-8 col-10 mx-auto mb-3 my-5 py-5 border shadow">
+                    <h3 class="text-center mb-3">Details</h3>
+                    <form action="/checkout" method="POST" id="form" onsubmit="return formValidation();">
+                        <div class="form-group">
+                            <label>Name</label>
+                            <input name="name" id="name" type="text" placeholder="Name" class="form-control">
                         </div>
-                    </div>
-                    <!-- Card -->
+                        <div class="form-group">
+                            <label>Phone</label>
+                            <input name="phone" id="phone" type="phone" placeholder="Phone Number" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label>Email</label>
+                            <textarea name="email" id="email" class="form-control" placeholder="Email" required></textarea>
+                        </div>
+                        <div class="form-group">
+                            <label>Country</label>
+                            <textarea name="country" id="country" class="form-control" placeholder="eg:India" required></textarea>
+                        </div>
+                        <div class="form-group">
+                            <label>Address</label>
+                            <textarea name="address" id="address" class="form-control" placeholder="bella compound 4th cross"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <label>Postcode</label>
+                            <textarea name="postcode" id="postcode" class="form-control" placeholder="eg:575757"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <label>City</label>
+                            <textarea name="city" id="city" class="form-control" placeholder="eg:Mangalore"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary btn-block">Purchase</button>
+                    </form>
                 </div>
+            </div>
                 <!--Grid column-->
 
                 <!--Grid column-->
