--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,5 @@
 
+
 {% extends "layout.html" %}
 {% block body %}
 
@@ -54,7 +55,7 @@
                         </div>
                         <div class="form-group">
                             <label>Email address</label>
-                            <input name="email" id="email" type="email" placeholder="Email" class="form-control">
+                            <input name="email" id="email" type="email" placeholder="Email" class="form-control" required>
                         </div>
                         <div class="form-group">
                             <label>Message</label>
