--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -10,6 +10,9 @@
         <div class="container ">
             <div class="section_title text-center mb-5">
                 <h1 class="text-capitalize">Checkout</h1>
+                <h3>Make sure to fill the below links</h3>
+                <button><a href="/register">Registration form.Click here to register</a></button>
+                <button><a href="/specification">Product specification!Click here</a></button>
             </div>
             <div class="row">
                 <div class="col-md-8 col-10 mx-auto mb-3 my-5 py-5 border shadow">
@@ -45,6 +48,7 @@
                         </div>
                         <button type="submit" class="btn btn-primary btn-block">Purchase</button>
                     </form>
+                    <a href="/payment">Click here for online payment</a>
                 </div>
             </div>
                 <!--Grid column-->
