--- a/templates/layout.html
+++ b/templates/layout.html
@@ -69,11 +69,8 @@
             <a href="/search" class="btn btn-sm btn-outline-primary">
               Search
             </a>
-            <a href="/login" class="btn btn-sm btn-outline-primary">
-              Login
-            </a>
-            <a href="/sign-up" class="btn btn-sm btn-outline-primary">
-              Sign-up
+            <a href="/register" class="btn btn-sm btn-outline-primary">
+              Register for purchasing
             </a>
           </div>
           <div class="cart">
