--- a/templates/about.html
+++ b/templates/about.html
@@ -54,7 +54,7 @@
                                         </div>
                                         <!--Content-->
                                         <p>
-                                            <i class="fas fa-quote-left"></i> I am currently pursueing my engineering at St Joseph Engineering College,Mangalore,Karnataka.I am studying in 3rd year with computer science as my branch.I am very passionate about learning new things.My hobbies are painting,writing blogs, drawing.I love to travel and make new friends.I developed the Swaksha Shopping website.I have done courses related to HTML,CSS,Javascript and some basics of python.
+                                            <i class="fas fa-quote-left"></i> I am very passionate about learning new things.My hobbies are painting,writing blogs, drawing.I love to travel and make new friends.I developed the Swaksha Shopping website.I have done courses related to HTML,CSS,Javascript and some basics of python.
                                         </p>
                                         <h4 class="font-weight-bold">Swathi Prabhu K</h4>
                                         <h6 class="font-weight-bold my-3">Web Developer</h6>
@@ -77,7 +77,7 @@
                                         </div>
                                         <!--Content-->
                                         <p>
-                                            <i class="fas fa-quote-left"></i> I am currently pursueing my engineering at St Joseph Engineering College,Mangalore,Karnataka.I am studying in 3rd year with computer science as my branch.I am very passionate about learning new things.My hobbies are painting and drawing.I love to travel and make new friends.I developed Swaksha shopping website.I have done courses related to HTML,CSS,Javascript and some basics of python. </p>
+                                            <i class="fas fa-quote-left"></i> I am very passionate about learning new things.My hobbies are painting and drawing.I love to travel and make new friends.I developed Swaksha shopping website.I have done courses related to HTML,CSS,Javascript and some basics of python. </p>
                                         <h4 class="font-weight-bold">Sudhiksha S Prabhu</h4>
                                         <h6 class="font-weight-bold my-3">Web Developer</h6>
                                         <!--Review-->
